--- a/module.yml
+++ b/module.yml
@@ -1,15 +1,15 @@
 name: stack-trace
 organization: distributed-systems
-version: 1.0.0
+version: 2.0.0
 elevator-pitch: Get clean, standardized stack traces from V8 Error objects
 engine:
-    node: 10.0.0+
-    chorme: 54+
+    node: 12.0.0+
+    chrome: 54+
 commands:
-    test: node --no-warnings --experimental-modules ./es-modules/distributed-systems/section-tests/x/bin/run.mjs ./test/*.mjs
+    test: node --no-warnings --experimental-modules ./es-modules/distributed-systems/section-tests/x/bin/run.js ./test/*.js
 npm-convert:
     source:
         - ./src
     destination: ./npm
 dev-link:
-    - section-tests
+    - section-tests 
