--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@distributed-systems/stack-trace",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Get clean, standardized stack traces from V8 Error objects",
   "main": "npm/src/StackTrace.js",
   "scripts": {
-    "test": "node --experimental-modules --no-warnings ./node_modules/.bin/section ./test/*.mjs"
+    "test": "node --experimental-modules --no-warnings ./node_modules/.bin/section ./test/*.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,6 @@
   "homepage": "https://github.com/distributed-systems/stack-trace#readme",
   "devDependencies": {
     "section-tests": "^2.2.3"
-  }
+  },
+  "type": "module"
 }
